Added saving and opening functionality.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "syntaxhighlighting.h": "c",
         "atomic": "c",
-        "windowsettings.h": "c"
+        "windowsettings.h": "c",
+        "headerbar.h": "c"
     }
 }
